@@ -4,10 +4,12 @@ CLICON_MODE="routing";
 CLICON_PROMPT="%U@%H> ";
 
 # Note, when switching to PT, change datamodel to only @datamodel
-#set @datamodel:ietf-routing@2014-10-26, cli_merge();
-set @datamodel:ietf-ipv4-unicast-routing, cli_merge();
-#set @datamodel:configuration, cli_merge();
-delete("Delete a configuration item") @datamodel:ietf-ipv4-unicast-routing, cli_del();
+#set @datamodel:ietf-routing, cli_merge();
+#set @datamodel:ietf-ipv4-unicast-routing, cli_merge();
+set @datamodel:ietf-ip, cli_merge();
+
+#delete("Delete a configuration item") @datamodel:ietf-ipv4-unicast-routing, cli_del();
+delete("Delete a configuration item") @datamodel:ietf-ip, cli_del();
 
 validate("Validate changes"), cli_validate();
 commit("Commit the changes"), cli_commit((int)0); # snapshot
