@@ -42,6 +42,15 @@
 /*
  * Prototypes
  */
+int        yang_type_cache_set(yang_type_cache **ycache, 	    
+			       yang_stmt *resolved, int options, cg_var *mincv, 
+			       cg_var *maxcv, char *pattern, uint8_t fraction);
+int        yang_type_cache_get(yang_type_cache *ycache, 
+			       yang_stmt **resolved, int *options, cg_var **mincv, 
+			       cg_var **maxcv, char **pattern, uint8_t *fraction);
+int        yang_type_cache_cp(yang_type_cache **ycnew, yang_type_cache *ycold);
+int        yang_type_cache_free(yang_type_cache *ycache);
+int        ys_resolve_type(yang_stmt *ys, void *arg);
 int        yang2cv_type(char *ytype, enum cv_type *cv_type);
 char      *cv2yang_type(enum cv_type cv_type);
 yang_stmt *yang_find_identity(yang_stmt *ys, char *identity);
